--- a/Codes/chasses_au_tresor/index.html
+++ b/Codes/chasses_au_tresor/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styleIndex.css">
     <title> Chasse au trésor </title>
 </head>
 <body>
-    <h1> Chasse au trésor </h1>
+    <h1> La chasse au trésor </h1>
     <!-- 
         Ecrire un document sur ce que l'on souhaite faire (thèmes du jeu, couleurs, contenu *, sons, etc. )
         Commenter le code
@@ -23,6 +24,15 @@
                 -> ralentissement : grimoire magique à évenement aléatoire (tempêtes, pluie, invocation d'insecte, etc.), 
                 -> avancé : grimoire magique à évenement aléatoire (nourriture qui apparait, pelle améliorée, etc.), 
     -->
+    <div id="menu">
+        <nav>
+            <ul>
+                <li> <a href="#"> Jeu </a></li>
+                <li> <a href="#"> Règles </a></li>
+                <li> <a href="#"> A propos </a></li>
+            </ul>
+        </nav>
+    </div>
     
 </body>
 </html>
