--- a/Codes/chasses_au_tresor/index.html
+++ b/Codes/chasses_au_tresor/index.html
@@ -27,7 +27,7 @@
     <div id="menu">
         <nav>
             <ul>
-                <li> <a href="#"> Jeu </a></li>
+                <li> <a href="pages/jeu.html"> Jeu </a></li>
                 <li> <a href="#"> Règles </a></li>
                 <li> <a href="#"> A propos </a></li>
             </ul>
