ajout partie info

--- a/Codes/chasses_au_tresor/pages/jeu.html
+++ b/Codes/chasses_au_tresor/pages/jeu.html
@@ -15,6 +15,9 @@
         <div id="message">
             <!-- Partie affichage des messages -->
         </div>
+        <div id="info">
+            <!-- info de partie -->
+        </div>
     </div>
     <script src="../JS/jeu.js"></script>
     
